Added notification system.

--- a/Reactor.Web/Views/Chat/Index.cshtml
+++ b/Reactor.Web/Views/Chat/Index.cshtml
@@ -3,8 +3,8 @@
 }
 
 <section class="chat container-fluid">
-    <div class="row">
-        <div class="col-md-3">
+    <div class="row no-gutters">
+        <div class="col-md-5">
             <div class="chat-contact">
                 <div class="chat-contact__header">
                     <input type="text" placeholder="Search for a friend" class="chat-contact__input" role="search"/>
@@ -17,14 +17,14 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-7">
             <div class="chat-box">
                 <div class="chat-box__wrapper d-none">
                     <div class="chat-box__header">
                         <h2 class="chat-box__recipient">You and <span></span></h2>
                     </div>
                     
-                    <div class="chat-box__Previous-chat-info">
+                    <div class="chat-box__previous-chat-info">
                         <p>Scroll up to load previous chat.</p>
                     </div>
 
@@ -44,8 +44,6 @@
                 </div>
             </div>
         </div>
-
-        <div class="col-md-3"></div>
 
     </div>
 
