--- a/Reactor.Web/Views/Profile/Index.cshtml
+++ b/Reactor.Web/Views/Profile/Index.cshtml
@@ -9,7 +9,7 @@
     
     <div class="box">
         <div class="box__header">
-            <h2 class="box__title">Suggested Friends</h2>
+            <h2 class="box__title">About</h2>
         </div>
         <div class="box__content">
             <ul class="box__list">
