--- a/Reactor.Web/Views/Shared/Templates/_Follow.cshtml
+++ b/Reactor.Web/Views/Shared/Templates/_Follow.cshtml
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="box__footer">
-            <div class="d-flex text-center justify-content-between">
+            <div class="d-flex text-center justify-content-around">
                 <div class="p-4 box__stat">
                     <span class="text-uppercase">Posts</span>
                     <p>@await PostService.GetUserTotalPostsAsync(Model.Id)</p>
