--- a/Reactor.Web/Views/Shared/Templates/_Post.cshtml
+++ b/Reactor.Web/Views/Shared/Templates/_Post.cshtml
@@ -1,5 +1,4 @@
-﻿@using Reactor.Services.Posts
-@model Reactor.Web.Models.Templates.PostTemplateModel
+﻿@model Reactor.Web.Models.Templates.PostTemplateModel
 @inject IPostService PostService
 
 @if (Model.Posts.Any())
