--- a/Reactor.Web/Views/Shared/_Layout.cshtml
+++ b/Reactor.Web/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700" rel="stylesheet">
+    @* <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700" rel="stylesheet"> *@
     <link rel="stylesheet" href="~/assets/styles/bootstrap.css"/>
     <link rel="stylesheet" href="~/assets/styles/font-awesome.css"/>
     <link rel="stylesheet" href="~/assets/styles/styles.css" asp-append-version="true"/>
@@ -25,32 +25,32 @@
     <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
         @* <a asp-controller="Home" asp-action="Index" class="navbar-brand">Reactor</a> *@
         <div class="container">
-              <div class="collapse navbar-collapse">
+            <div class="collapse navbar-collapse">
 
-            <a class="navbar-brand" asp-controller="Home" asp-action="Index">Reactor</a>
+                <a class="navbar-brand" asp-controller="Home" asp-action="Index">Reactor</a>
 
-            <ul class="navbar-nav ml-auto">
+                <ul class="navbar-nav ml-auto">
 
-                @await Component.InvokeAsync("Notifications")
-                
-                <li class="nav-item">
-                    <a class="nav-link" asp-controller="Chat" title="chats" asp-action="Index">
-                        <i class="fa fa-envelope-o"></i>
-                    </a>
-                </li>
+                    @await Component.InvokeAsync("Notifications")
 
-                <li class="nav-item">
-                    <a class="nav-link" asp-controller="Friend" title="friends" asp-action="List">
-                        <i class="fa fa-users"></i>
-                    </a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" asp-controller="Profile" asp-action="Index" asp-route-username="@user.UserName">
-                        <i class="fa fa-user-o"></i> Welcome, @user.FullName
-                    </a>
-                </li>
-            </ul>
-        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Chat" title="chats" asp-action="Index">
+                            <i class="fa fa-envelope-o"></i>
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Friend" title="friends" asp-action="List">
+                            <i class="fa fa-users"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" asp-controller="Profile" asp-action="Index" asp-route-username="@user.UserName">
+                            <i class="fa fa-user-o"></i> Welcome, @user.FullName
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 </header>
@@ -61,6 +61,10 @@
 <footer>
 
 </footer>
+<div class="loader">
+    <img class="loader__icon" src="~/assets/images/spinner.svg"/>
+</div>
+
 <script type="text/javascript" src="~/assets/scripts/app-bundle.js" asp-append-version="true"></script>
 <script type="text/javascript" src="~/assets/scripts/vendor-bundle.js" asp-append-version="true"></script>
 <form asp-antiforgery="true"></form>
